CMES用API追加
