# develop/lambda/api/src/api/openapi.yaml
@@ -2698,6 +2698,69 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: External
+  /meta/cm:
+    get:
+      tags:
+      - meta
+      summary: 更新CMID一覧取得（外部システム専用）
+      description: 更新CMID一覧取得
+      operationId: listMetaCm
+      parameters:
+      - name: targetDate
+        in: query
+        description: 取得日時(YYYYMMDD)
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+          example: "20210329"
+      responses:
+        "200":
+          description: successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MetaExternalCm'
+        "204":
+          description: Bad request. Response invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "400":
+          description: Bad request. Response invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "401":
+          description: API key is missing or invalid
+          headers:
+            WWW_Authenticate:
+              style: simple
+              explode: false
+              schema:
+                type: string
+        "403":
+          description: Access denied
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "404":
+          description: A user with the specified ID was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "5XX":
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Meta
 components:
   schemas:
     Auth:
@@ -3602,6 +3665,114 @@ components:
         errorMessage: CM名に規定外の文字が使用されています
         errorCode: E0001
         cmId: 123456789-c-12345678
+    MetaExternalCm:
+      properties:
+        targetDate:
+          type: string
+          description: YYYYMMDD
+          example: "20220401"
+        cmMetas:
+          type: array
+          items:
+            $ref: '#/components/schemas/MetaExternalCmItem'
+      example:
+        cmMetas:
+        - cmName: 時報A
+          cmCommentManuscript: テストCMです
+          customerNameKana: ユーセンテンポ
+          sceneName: 開店
+          cmProductionType: "01"
+          cmId: 123456789-c-12345678
+          serviceName: U MESSAGE
+          customerName: USEN店舗
+          sceneCd: "004"
+          unisCustomerCd: "123456789"
+          serviceCd: U19
+          cmContentTime: 30000
+          cmDescription: テストCMです
+        - cmName: 時報A
+          cmCommentManuscript: テストCMです
+          customerNameKana: ユーセンテンポ
+          sceneName: 開店
+          cmProductionType: "01"
+          cmId: 123456789-c-12345678
+          serviceName: U MESSAGE
+          customerName: USEN店舗
+          sceneCd: "004"
+          unisCustomerCd: "123456789"
+          serviceCd: U19
+          cmContentTime: 30000
+          cmDescription: テストCMです
+        targetDate: "20220401"
+    MetaExternalCmItem:
+      properties:
+        unisCustomerCd:
+          type: string
+          description: UNIS顧客CD
+          example: "123456789"
+        customerName:
+          type: string
+          description: 顧客名
+          example: USEN店舗
+        customerNameKana:
+          type: string
+          description: 顧客名カナ
+          example: ユーセンテンポ
+        serviceCd:
+          type: string
+          description: U19：U MESSAGE、U17:S'sence
+          example: U19
+        serviceName:
+          type: string
+          description: サービス名
+          example: U MESSAGE
+        cmId:
+          type: string
+          description: CM ID
+          example: 123456789-c-12345678
+        cmName:
+          type: string
+          description: CM名
+          example: 時報A
+        cmDescription:
+          type: string
+          description: CM説明
+          example: テストCMです
+        cmCommentManuscript:
+          type: string
+          description: CMコメント原稿
+          example: テストCMです
+        cmContentTime:
+          type: integer
+          description: 尺時間
+          format: int64
+          example: 30000
+        cmProductionType:
+          type: string
+          description: 01：音楽系、02：素ナレ
+          example: "01"
+        sceneCd:
+          type: string
+          description: シーンCD
+          example: "004"
+        sceneName:
+          type: string
+          description: シーン名
+          example: 開店
+      example:
+        cmName: 時報A
+        cmCommentManuscript: テストCMです
+        customerNameKana: ユーセンテンポ
+        sceneName: 開店
+        cmProductionType: "01"
+        cmId: 123456789-c-12345678
+        serviceName: U MESSAGE
+        customerName: USEN店舗
+        sceneCd: "004"
+        unisCustomerCd: "123456789"
+        serviceCd: U19
+        cmContentTime: 30000
+        cmDescription: テストCMです
     Error:
       type: object
       properties:
